--- a/literatura.bib
+++ b/literatura.bib
@@ -59,3 +59,10 @@
     url = {https://doi.org/10.5539/mas.v12n3p175},
     year = {2017}
 }
+
+@online{Versions,
+    title = "Differences in SOAP versions",
+    url  = "https://www.ibm.com/support/knowledgecenter/SSEQTP_8.5.5/com.ibm.websphere.base.doc/ae/cwbs_soapverdiffs.html",
+    addendum = "(cit: 5.12.2020)",
+    keywords = "web services, technologies, soap, versions"
+}
